Continued implementation of Supplier MaintananceView. Completed implementation of the ContactPersion Action Buttos TODO: Implement Supplier Action Buttons

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -876,6 +876,7 @@
 	<!--#endregion-->
 
 	<!--#region Maintenance page-->
+	<system:String x:Key="Edit.SupplierContact.NoContactSelected.Error">Functies</system:String>
 	<!--#endregion-->
 	<!--#endregion-->
 
